syntax = "proto3";

option csharp_namespace = "ClientShelters";
import "Protos/AuthorizationPr.proto";
import "Protos/AnimalPr.proto";
import "google/protobuf/timestamp.proto";
package ContractPr;

service ContractCon {
	rpc CreateNewContract (AddContractRequest) returns (isCorrectContr);
	rpc DeleteContract (DeleteContractRequest) returns (isCorrectContr);
	rpc GetContrats (GetContratsRequest) returns (ContractsReply);
}

message AddContractRequest {
	Authorization.UserReply user = 1;
	double costPerDay = 2;
	google.protobuf.Timestamp startDate = 3;
	google.protobuf.Timestamp endDate = 4;
	int32 id_Shelter = 5;
}

message DeleteContractRequest {
	Authorization.UserReply user = 1; 
	int32 numberContr = 2;
}

message GetContratsRequest {
	Authorization.UserReply user = 1;
	int32 id_shelter = 2; 
	bool allShelters = 3;
	int32 filtNum = 4;
	int32 filtCostStart = 5;
	int32 filtCostEnd = 6;
	google.protobuf.Timestamp filtDateStart = 7;
	google.protobuf.Timestamp filtDateEnd = 8;
	int32 lastId = 9;
	bool includeKeep = 10;
}

message ContractsReply {
	repeated ContractReply contracts = 1;
	int32 countPage = 2;
}

message ContractReply {
	int32 Number = 1;
	double CostPerDay = 2;
	google.protobuf.Timestamp StartDate = 3;
	google.protobuf.Timestamp EndDate = 4;
	int32 Id_Shelter = 5;
}

message isCorrectContr {
	bool isCorrect = 1;
}
